--- a/index.html
+++ b/index.html
@@ -94,9 +94,29 @@
             opacity: 1,
             fillOpacity: 0.8
           });
+  },
+        onEachFeature: function(feature, layer) {
+          layer.on('click', function(e) {
+            alert("type: " + feature.properties.TYPE_OF_WA);
+          });
         }
+
       }).addTo(map);
     });
+	 
+    // Add layers to map with control options
+    const baseLayers = {};
+    const overlays = {
+      "Zones": zonesLayer,
+      "Waste Containers": wasteContainersLayer
+    };
+
+    // Add layer control to the map
+    L.control.layers(baseLayers, overlays).addTo(map);
+
+    // Add both layers to the map by default
+    zonesLayer.addTo(map);
+    wasteContainersLayer.addTo(map); 
 
 
 
