--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
       }).addTo(map);
     });
 	 
-    // Add layers to map with control options
+ 
+
+
+
+      // Add layers to map with control options
     const baseLayers = {};
     const overlays = {
       "Zones": zonesLayer,
@@ -116,11 +120,7 @@
 
     // Add both layers to the map by default
     zonesLayer.addTo(map);
-    wasteContainersLayer.addTo(map); 
-
-
-
-  </script>
+    wasteContainersLayer.addTo(map);</script>
 </body>
 
 </html>
